[package]
name = "resource_collection_sim"
version = "0.1.0"
edition = "2021"
description = "Simulation de collecte de ressources par robots autonomes (EFREI - Projet Rust)"

[dependencies]
# Bruit de Perlin pour la génération procédurale des obstacles
noise = "0.9"
# Génération de nombres aléatoires (quantités de ressources, placement)
rand = "0.8"

[dependencies.ratatui]
version = "0.29"

[dependencies.crossterm]
version = "0.28"

[profile.release]
opt-level = 3
